// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactVideo Tag "iframe" Video component with Vimeo 1`] = `
<div
  className="css-ngvsmk"
>
  
  <iframe
    allow="autoplay; fullscreen"
    allowFullScreen={true}
    className="css-0"
    frameBorder="0"
    height="auto"
    margin={0}
    src="https://vimeo.com/366333472"
    width="100%"
  />
</div>
`;

exports[`ReactVideo Tag "video" Video component with HTTP streaming 1`] = `
<div
  className="css-ngvsmk"
>
  <video
    autoPlay={true}
    className="css-0"
    loop={true}
    m3u8="https://player.vimeo.com/external/375031697.m3u8?s=326616eb51bb4e8c17bc634da4fd784c2a700c9e"
    mp4=""
    muted={true}
    ogg=""
    playsInline={true}
    poster=""
    preload="true"
    webm=""
    width="100%"
  >
    
    
    
    <source
      className="css-0"
      src="https://player.vimeo.com/external/375031697.m3u8?s=326616eb51bb4e8c17bc634da4fd784c2a700c9e"
      type="application/x-mpegURL"
    />
  </video>
  
</div>
`;

exports[`ReactVideo Tag "video" Video component with mp4 1`] = `
<div
  className="css-ngvsmk"
>
  <video
    autoPlay={true}
    className="css-0"
    loop={true}
    m3u8=""
    mp4="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
    muted={true}
    ogg=""
    playsInline={true}
    poster=""
    preload="true"
    webm=""
    width="100%"
  >
    <source
      className="css-0"
      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
      type="video/mp4"
    />
    
    
    
  </video>
  
</div>
`;

exports[`ReactVideo Tag "video" Video component with ogg 1`] = `
<div
  className="css-ngvsmk"
>
  <video
    autoPlay={true}
    className="css-0"
    loop={true}
    m3u8=""
    mp4=""
    muted={true}
    ogg="http://techslides.com/demos/sample-videos/small.ogv"
    playsInline={true}
    poster=""
    preload="true"
    webm=""
    width="100%"
  >
    
    <source
      className="css-0"
      src="http://techslides.com/demos/sample-videos/small.ogv"
      type="video/ogg"
    />
    
    
  </video>
  
</div>
`;

exports[`ReactVideo Tag "video" Video component with responsive wrapper and mp4 1`] = `
<div
  className="css-1jajgz4"
>
  <video
    autoPlay={true}
    className="css-0"
    height={
      Array [
        "400px",
        "480px",
        "600px",
        "760px",
      ]
    }
    loop={true}
    m3u8=""
    mp4="http://techslides.com/demos/sample-videos/small.mp4"
    muted={true}
    ogg=""
    playsInline={true}
    poster=""
    preload="true"
    webm=""
    width="100%"
  >
    <source
      className="css-0"
      src="http://techslides.com/demos/sample-videos/small.mp4"
      type="video/mp4"
    />
    
    
    
  </video>
  
</div>
`;

exports[`ReactVideo Tag "video" Video component with webm 1`] = `
<div
  className="css-ngvsmk"
>
  <video
    autoPlay={true}
    className="css-0"
    loop={true}
    m3u8=""
    mp4=""
    muted={true}
    ogg=""
    playsInline={true}
    poster=""
    preload="true"
    webm="http://techslides.com/demos/sample-videos/small.webm"
    width="100%"
  >
    
    
    <source
      className="css-0"
      src="http://techslides.com/demos/sample-videos/small.webm"
      type="video/webm"
    />
    
  </video>
  
</div>
`;

exports[`Vimeo renders correctly 1`] = `ReactWrapper {}`;
